--- a/spotlight.html
+++ b/spotlight.html
@@ -42,20 +42,20 @@
         <h4>Local legend Bar Hill Gin</h4>
         <h5>Made locally in Vermont and inspired by the views from atop the Barr Hill Nature Preserve.</h5>
         <h5>We will be serving all sorts of concoctions using this delightful liquor. If you haven't ventured up north yet - their new distillery in Montpelier is worth the trip.</h5>
-        <a id="spotlight__link" href="http://www.caledoniaspirits.com" target="_blank">Caledonia Spirits</a>
+        <a class="spotlight__link" href="http://www.caledoniaspirits.com" target="_blank">Caledonia Spirits</a>
       </div>
       <div id="split__screen--1--right">
-        <img src="images/spotlight/local1.jpeg" alt="picture of bar hill gin" width=100%>
+        <img src="images/spotlight/local1.jpeg" alt="picture of bar hill gin">
       </div>
 
       <div id="split__screen--2--right">
         <h4>Abracadabra Coffee</h4>
         <h5>The Buzzy Mixer; give our Cuban take, El Cafecito a try.</h5>
         <h5>Tired of netflix and chill, but leaving the house feels hard? Us too. Which is why we collaborated with Abracadabra to make some cocktails with a caffeine kick. </h5>
-        <a id="spotlight__link" href="https://www.abracadabracoffeeco.com/" target="_blank">The Local Roasters</a>
+        <a class="spotlight__link" href="https://www.abracadabracoffeeco.com/" target="_blank">The Local Roasters</a>
       </div>
       <div id="split__screen--2--left">
-        <img src="images/spotlight/local2.jpeg" alt="picture of seasonal cocktail" width=100%>
+        <img src="images/spotlight/local2.jpeg" alt="picture of seasonal cocktail">
       </div>
       <!---SPOTLIGHT PAGE EVENTS-->
       <div id="split__screen--3--left">
@@ -64,29 +64,30 @@
         <h5>Come out for a night of revelry to celebrate. We will be making all the holiday classics - but as drinks! We'll have some special holiday games and trivia plus prizes!</h5>
       </div>
       <div id="split__screen--3--right">
-        <img src="images/spotlight/event2.jpeg" alt="picture of seasonal cocktail" width=100%>
+        <img src="images/spotlight/event2.jpeg" alt="picture of seasonal cocktail">
       </div>
 
       <div id="split__screen--4--right">
         <h4>Sabrina Comellas</h4>
         <h5>January 14th 2020</h5>
         <h5>Sabrina Comellas is a singer songwriter local to Burlington Vermont. Her music is best described as Americana pop - New to the scene this year and making a splash - come listen to her debut! </h5>
-        <a id="spotlight__link" href="https://www.sabrinacomellas.com/" target="_blank">Check Out Sabrinas Music</a>
+        <a class="spotlight__link" href="https://www.sabrinacomellas.com/" target="_blank">Check Out Sabrinas Music</a>
       </div>
       <div id="split__screen--4--left">
-        <img src="images/spotlight/event3.jpeg" alt="picture of seasonal cocktail" width=100%>
+        <img src="images/spotlight/event3.jpeg" alt="picture of seasonal cocktail">
       </div>
   </section>
 
     <p class="print__only">Events updated on December 5 2019. Please see http://www.wolftree.com for the most recent calendar.</p>
 
     <!--footer-->
-    <footer>
-       <p id="footer__grid--top">
-       <img class="img__leaf"src="/images/leafstraight.png"><a id="footer__link" href="newsletter.html" target="_blank">Newsletter</a>
-       <img class="img__leaf"src="/images/dandelion.png"><a id="footer__link" href="https://www.instagram.com/wolftreevt/" target="_blank">Instagram</a>
-       <img class="img__leaf"src="/images/leafcluster.png">&copy; Paige Madeline Jones 2019
-       <img class="img__leaf"src="/images/leafstraight.png"</p>
+    <footer id="footer__grid--top">
+      <div class="footer__style">
+       <img class="img__leaf" src="/images/leafstraight.png" alt="leaf" ><a id="footer__newsletter" href="newsletter.html" target="_blank">Newsletter</a>
+       <img class="img__leaf" src="/images/dandelion.png" alt="dandelion" ><a id="footer__insta" href="https://www.instagram.com/wolftreevt/" target="_blank">Instagram</a>
+       <img class="img__leaf" src="/images/leafcluster.png" alt="leafcluster">&copy; Paige Madeline Jones 2019
+       <img class="img__leaf" src="/images/leafstraight.png" alt="leaf" >
+     </div>
     </footer>
   </body>
 
