--- a/findUs.html
+++ b/findUs.html
@@ -57,18 +57,19 @@
          <a id="call__us" href="tel:802-356-7860">CALL US</a>  <!--using a link for click to call-->
        </div>
        <div id="findUs--right">
-         <img src="images/flute.jpeg" alt="picture of a cocktail being poured" width=100%>
+         <img src="images/flute.jpeg" alt="picture of a cocktail being poured">
        </div>
      </section>
 
-      <!--footer-->
-      <footer>
-         <p id="footer__grid--top">
-         <img class="img__leaf"src="/images/leafstraight.png"><a id="footer__link" href="newsletter.html" target="_blank">Newsletter</a>
-         <img class="img__leaf"src="/images/dandelion.png"><a id="footer__link" href="https://www.instagram.com/wolftreevt/" target="_blank">Instagram</a>
-         <img class="img__leaf"src="/images/leafcluster.png">&copy; Paige Madeline Jones 2019
-         <img class="img__leaf"src="/images/leafstraight.png"</p>
-      </footer>
+     <!--footer-->
+     <footer id="footer__grid--top">
+       <div class="footer__style">
+        <img class="img__leaf" src="/images/leafstraight.png" alt="leaf" ><a id="footer__newsletter" href="newsletter.html" target="_blank">Newsletter</a>
+        <img class="img__leaf" src="/images/dandelion.png" alt="dandelion" ><a id="footer__insta" href="https://www.instagram.com/wolftreevt/" target="_blank">Instagram</a>
+        <img class="img__leaf" src="/images/leafcluster.png" alt="leafcluster">&copy; Paige Madeline Jones 2019
+        <img class="img__leaf" src="/images/leafstraight.png" alt="leaf" >
+      </div>
+     </footer>
 
   </body>
 </html>
