--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="overlay-content popup1">
           <button class="close-btn">x</button>  <!--close button closes on click see main.js-->
           <br><br><br><br><br><br><br><br><br><br> <!--this is not ideal but im having issues with the box collapsing cutting off the image-->
-          <a class="button" href="#" type='button'>BUY TICKETS NOW!</a> <!--button to no where just for example-->
+          <a class="button" href="#">BUY TICKETS NOW!</a> <!--button to no where just for example-->
           <br><br>
         </div>
         </div>
@@ -75,14 +75,15 @@
     </section>
 
 
-<!--footer-->
-<footer>
-   <p id="footer__grid--top">
-   <img class="img__leaf"src="/images/leafstraight.png"><a id="footer__link" href="newsletter.html" target="_blank">Newsletter</a>
-   <img class="img__leaf"src="/images/dandelion.png"><a id="footer__link" href="https://www.instagram.com/wolftreevt/" target="_blank">Instagram</a>
-   <img class="img__leaf"src="/images/leafcluster.png">&copy; Paige Madeline Jones 2019
-   <img class="img__leaf"src="/images/leafstraight.png"</p>
-</footer>
+    <!--footer-->
+    <footer id="footer__grid--top">
+      <div class="footer__style">
+       <img class="img__leaf" src="/images/leafstraight.png" alt="leaf" ><a id="footer__newsletter" href="newsletter.html" target="_blank">Newsletter</a>
+       <img class="img__leaf" src="/images/dandelion.png" alt="dandelion" ><a id="footer__insta" href="https://www.instagram.com/wolftreevt/" target="_blank">Instagram</a>
+       <img class="img__leaf" src="/images/leafcluster.png" alt="leafcluster">&copy; Paige Madeline Jones 2019
+       <img class="img__leaf" src="/images/leafstraight.png" alt="leaf" >
+     </div>
+    </footer>
 
   </body>
 </html>
