--- a/menu.html
+++ b/menu.html
@@ -106,12 +106,13 @@
       <p class="print__only">Menu updated on November 11 2019. Please see http://www.wolftree.com for the most recent version.</p>
 
       <!--footer-->
-      <footer>
-         <p id="footer__grid--top">
-         <img class="img__leaf"src="/images/leafstraight.png"><a id="footer__link" href="newsletter.html" target="_blank">Newsletter</a>
-         <img class="img__leaf"src="/images/dandelion.png"><a id="footer__link" href="https://www.instagram.com/wolftreevt/" target="_blank">Instagram</a>
-         <img class="img__leaf"src="/images/leafcluster.png">&copy; Paige Madeline Jones 2019
-         <img class="img__leaf"src="/images/leafstraight.png"</p>
+      <footer id="footer__grid--top">
+        <div class="footer__style">
+         <img class="img__leaf" src="/images/leafstraight.png" alt="leaf" ><a id="footer__newsletter" href="newsletter.html" target="_blank">Newsletter</a>
+         <img class="img__leaf" src="/images/dandelion.png" alt="dandelion" ><a id="footer__insta" href="https://www.instagram.com/wolftreevt/" target="_blank">Instagram</a>
+         <img class="img__leaf" src="/images/leafcluster.png" alt="leafcluster">&copy; Paige Madeline Jones 2019
+         <img class="img__leaf" src="/images/leafstraight.png" alt="leaf" >
+       </div>
       </footer>
   </body>
 
